# trex

./: .pre-commit-config.yaml  benchmark_tree_cost.py  pyproject.toml  readme.md  sweep.yaml
.github/workflows/: ci.yml
scripts/: register_sweep.py  train.py
src/trex/: ground_truth.py  nk_model.py  padding.py  sankoff.py  tree.py  types.py
src/trex/evals/: benchmark.py
src/trex/svm_tree/: configs.py  data_utils.py  dynamic_model.py  hierarchical_model.py  model.py
src/trex/svm_tree/components/: feature_encoder.py  ste.py  svm.py  topology.py  topology_head.py
src/trex/utils/: memory.py  types.py
tests/: test_convergence.py  test_nk_model_new.py  test_padding.py  test_sankoff.py  test_tree.py
tests/trex/svm_tree/: test_model.py
