[project]
name = "trex"
version = "0.1.0"
description = "Differentiable algorithms for phylogenetic tree search using JAX."
authors = [
  { name = "Marielle Russo" }
]
readme = "readme.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "jax",
  "pytest",
  "equinox",
  "jaxlib",
  "jaxtyping",
  "numpy",
  "optax",
  "tqdm",
  "wandb",
  "scikit-learn",
  "matplotlib",
  "tyro",
]

[project.optional-dependencies]
cuda = ["jax[cuda12]"]
tpu = ["jax[tpu]"]
cpu = ["jax"]
dev = [
  "ruff",
  "pytest-cov",
  "black",
  "ty",
  "pre-commit",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinxext-rediraffe",
    "sphinx-book-theme",
    "myst-nb",
]
tests = [
    "pytest",
    "pytest-cov",
    "chex",
]
[tool.ruff]
line-length = 100
indent-width = 2
fix = true
exclude = ["tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "PD",
  "F722", # jaxtyping strings
  "TRY003", # long exception messages
  "EM101", "EM102", # exception literals
  "TC001", "TC002", "TC003", # move into type-checking block
  "PLR2004", # magic numbers
  "ERA001", # commented-out code
  "D", # docstrings
  "PLW0603", # global update
  "ANN", # type annotations
  "ARG", # unused arguments
  "FBT", # boolean traps
  "T201", # print statements
  "F821", # undefined name (jaxtyping dims)
  "PLR0913", # too many arguments
  "E501", # line too long
]
pylint.max-args = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101", # assert allowed in tests
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


